samples/bookinfo/networking/bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
      @REPLACE TEAMXX WITH YOUR TEAM NUMBER AND DELETE THIS LINE!!!@
        exact: "/teamXX/productpage"
    rewrite:
      uri: "/productpage"
    route:
    - destination:
        host: productpage
        port:
          number: 9080
  - match:
    - uri:
      @REPLACE TEAMXX WITH YOUR TEAM NUMBER AND DELETE THIS LINE!!!@
        exact: "/teamXX/login"
    rewrite:
      uri: "/login"
    route:
    - destination:
        host: productpage
        port:
          number: 9080
  - match:
    - uri:
      @REPLACE TEAMXX WITH YOUR TEAM NUMBER AND DELETE THIS LINE!!!@
        exact: "/teamXX/logout"
    rewrite:
      uri: "/logout"
    route:
    - destination:
        host: productpage
        port:
          number: 9080
  - match:
    - uri:
      @REPLACE TEAMXX WITH YOUR TEAM NUMBER AND DELETE THIS LINE!!!@
        prefix: "/teamXX/api/v1/products"
    rewrite:
      uri: "/api/v1/products"
    route:
    - destination:
        host: productpage
        port:
          number: 9080
